---
= Nouveautés de l'API REST Astra Control
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
NetApp met régulièrement à jour l'API REST Astra Control pour vous apporter de nouvelles fonctionnalités, des améliorations et des correctifs.



== 22 novembre 2022 (22.11)

Cette version inclut une extension et une mise à jour de l'API REST ainsi qu'une meilleure prise en charge de l'espace de noms et du protocole LDAP.



=== Nouvelles ressources Astra

Quatre nouveaux types de ressources ont été ajoutés : *apiResource*, *ldapGroup*, *LDAPUser* et *Task*. En outre, plusieurs ressources et points de terminaison existants ont été améliorés.



=== Suivi de la prise en charge des tâches à long terme

Les nouveaux noeuds finaux de tâche permettent d'accéder aux ressources de tâches gérées et peuvent être utilisés pour afficher l'état des tâches internes longues.



=== Scénarios d'utilisation améliorés de l'espace de noms

Un support a été ajouté pour les applications, couvrant plusieurs espaces de noms ainsi que les ressources de cluster associées à des ressources qualifiées par espace de noms.



=== Des abonnements cloud étendus

Des abonnements à plusieurs comptes peuvent désormais être ajoutés pour chacun des fournisseurs cloud.



=== Flux de travail supplémentaires

Des workflows supplémentaires illustrant l'API REST Astra Control ont été ajoutés. Voir link:../workflows_infra/workflows_infra_before.html["Workflows d'infrastructure"] et link:../workflows/workflows_before.html["Flux de travail de gestion"] pour en savoir plus.

.Informations associées
* https://docs.netapp.com/us-en/astra-control-center/release-notes/whats-new.html["Astra Control Center : les nouveautés"^]




== 10 août 2022 (22.08)

Cette version inclut une extension et une mise à jour de l'API REST, ainsi que des fonctions de sécurité et d'administration améliorées.



=== Nouvelles ressources Astra
