@@ -332,7 +332,6 @@
   <block id="98904826ae5cef8716020180473276c8" category="admonition">Le format du chemin et de l'URL complète utilisés pour accéder aux ressources de contrôle Astra est basé sur plusieurs valeurs. Voir <block ref="d30352e41f8ff3b0c022e188e6d650e9" category="inline-link-macro-rx"></block> pour en savoir plus. Voir aussi <block ref="10fd548eb0773eced2b1f8455835ae29" category="inline-link-macro-rx"></block> Pour en savoir plus sur l'utilisation des ressources et des terminaux Astra,</block>
   <block id="94076f0e9f9b57b9bc636dff06dec4be" category="section-title">Résumé des ressources REST d'Astra Control</block>
   <block id="0f879b71f480ca631ac007cea8270eb9" category="paragraph">Les principaux terminaux de ressources de l'API REST Astra Control sont organisés en trois catégories. Chaque ressource est accessible avec l'ensemble complet des opérations CRUD (création, lecture, mise à jour, suppression) sauf mention contraire.</block>
-  <block id="5814e35bd932d85c35c92f3c990f80c0" category="paragraph">La colonne *version* indique la version d'Astra lorsque la ressource a été introduite pour la première fois. Ce champ est en gras pour les ressources récemment ajoutées avec la version actuelle.</block>
   <block id="7dbea29c80effd84223267932eaa1d82" category="section-title">Ressources centrales</block>
   <block id="5503f539f2ed18a2040c3adee6743b18" category="paragraph">Les terminaux de ressources de base fournissent les services de base nécessaires pour établir et maintenir l'environnement d'exécution Astra.</block>
   <block id="be8545ae7ab0276e15898aae7acfbd7a" category="cell">Ressource</block>
@@ -713,7 +712,6 @@
   <block id="39fc3040b9fe64cf202ce4de80bf7f69" category="list-text">Il existe un ensemble riche de paramètres de requête qui peuvent être utilisés pour accéder aux collections de ressources. Certaines opérations prises en charge incluent le filtrage, le tri et la pagination.</block>
   <block id="a941511c207017106c6b7b09e9dec884" category="summary">La documentation de ce site décrit l'API REST Astra Control et les technologies d'automatisation associées disponibles avec Astra Control.</block>
   <block id="d71331c5ce470b093ebf6c996f4ed88a" category="doc">À propos de cette version</block>
-  <block id="ea68f7ff6b79a550f669d752f15bd5da" category="paragraph">Consultez les pages et sites suivants pour plus d'informations sur cette version ainsi que sur les versions précédentes :</block>
   <block id="89d597c4d411409065b7e48fe97b7327" category="inline-link-macro">Nouveautés de l'API REST Astra Control</block>
   <block id="55d1aec576bc2fa5929c487a67f4f1fe" category="list-text"><block ref="55d1aec576bc2fa5929c487a67f4f1fe" category="inline-link-macro-rx"></block></block>
   <block id="c4fabb35d8b386aaa673c94aee7e69f2" category="inline-link-macro">Ressources REST et terminaux</block>
@@ -721,7 +719,6 @@
   <block id="fdd081f1598a50889ba0720484271938" category="inline-link-macro">Versions antérieures de la documentation d'Astra Automation</block>
   <block id="0cc206202c15e68cf39519791ed593a1" category="list-text"><block ref="0cc206202c15e68cf39519791ed593a1" category="inline-link-macro-rx"></block></block>
   <block id="3f4fc4220755866f399810fee47c7884" category="inline-link-macro">Contributeur GitHub</block>
-  <block id="65ed3c4720fad34d453db54755338725" category="paragraph">Suivez-nous sur Twitter @NetAppDoc. Envoyez vos commentaires sur la documentation en devenant un <block ref="78cabac26f0b6e0ce9a3e24d1b749910" category="inline-link-macro-rx"></block> ou en envoyant un e-mail à doccomments@netapp.com.</block>
   <block id="a5f871c981a398cb87374a1ff883bcca" category="summary">Vous pouvez utiliser le script suivant pour répertorier les applications de votre compte Astra.</block>
   <block id="0dca49fc2e144253162b8cbd94b3b83c" category="admonition">Voir <block ref="471a805638f43cfd34206d9398385425" category="inline-link-macro-rx"></block> Par exemple le fichier d'entrée JSON requis.</block>
   <block id="c30daace746a4b0fbccf1758ed0282eb" category="summary">Python est un langage de développement populaire pour l'automatisation des data centers. Avant d'utiliser les fonctions natives de Python avec plusieurs packages courants, vous devez préparer l'environnement et les fichiers d'entrée requis.</block>
@@ -1008,7 +1005,6 @@
   <block id="c23ee749361bcb35c4bb9425ae5cd602" category="cell">/Accounts/{account_ID}/topologique/v1/nuages/&lt;CLOUD_ID&gt;/clusters/&lt;CLUSTER_ID&gt;/storageclasses</block>
   <block id="38a0f81608bad4301a7bd0c62937c7a0" category="summary">Vous pouvez ajouter un cluster pour qu'il soit géré par Astra.</block>
   <block id="617a1e32f2d409a9c77e56b76a744edc" category="doc">Ajouter un cluster à l'aide des informations d'identification</block>
-  <block id="1596fe22178cdca2d275cff48aad4af1" category="paragraph">Vous pouvez ajouter un cluster pour qu'il soit géré par Astra. À partir de l'Astra 22.11, vous pouvez ajouter un groupe d'instruments avec le centre de contrôle Astra ou le service de contrôle Astra.</block>
   <block id="ec1064b7d3d701d90bcd843f62de2199" category="admonition">L'ajout d'un cluster n'est pas nécessaire lors de l'utilisation d'un service Kubernetes depuis l'un des principaux fournisseurs cloud (AKS, EKS, GKE).</block>
   <block id="9a7df7f9a0a709d54e5600f10282be3c" category="section-title">1. Procurez-vous le fichier kubeconfig</block>
   <block id="0f9d366662bdbaac5e7e94b497107f97" category="paragraph">Vous devez obtenir une copie du fichier *kubconfig* auprès de votre administrateur ou service Kubernetes.</block>
@@ -1091,7 +1087,6 @@
   <block id="012c01c016d35f3bdc2e34a079b6cf0e" category="list-text"><block ref="012c01c016d35f3bdc2e34a079b6cf0e" category="inline-link-rx"></block></block>
   <block id="099195e2a0ecbb5b0569da7e9c28fbc0" category="inline-link">Astra Control Center 21.08 : les nouveautés</block>
   <block id="70679aeca94d2b828ca1dc6cda2ac994" category="list-text"><block ref="70679aeca94d2b828ca1dc6cda2ac994" category="inline-link-rx"></block></block>
-  <block id="9f4dd3879adfbe7a60dc7c6745d67158" category="paragraph">La documentation de ce site décrit l'API REST Astra Control et les technologies d'automatisation connexes, disponibles avec la version 2022 novembre 22.11 d'Astra Control. En particulier, cette version de l'API REST est incluse avec les 22.11 versions correspondantes du centre de contrôle Astra et du service de contrôle Astra.</block>
   <block id="070b3d3a153094a5ee57ed5e75530780" category="inline-link">Documentation Astra Control Center 22.11</block>
   <block id="bee8b0efee9e08520e8e0cb30b730adf" category="list-text"><block ref="bee8b0efee9e08520e8e0cb30b730adf" category="inline-link-rx"></block></block>
   <block id="165fa9bdd003d8079831262d0360efc1" category="inline-link">Documentation Astra Control Automation 22.08</block>
@@ -1099,11 +1094,9 @@
   <block id="547abae9d6ca9df339ec4543e220ab8e" category="sidebar">Premier appel d'API</block>
   <block id="013a127f643228c21ab6c9baf558cef5" category="sidebar">Ajouter un cluster</block>
   <block id="826f785c760529ceb6e978afdab2a9a7" category="sidebar">Création d'une règle de protection</block>
-  <block id="01d6bcac2686956739a4135c6248a7e0" category="admonition">Il n'y a pas de nouveaux problèmes connus avec la version 22.11 de l'API REST Astra Control. Les problèmes décrits ci-dessous ont été découverts dans les versions précédentes et sont toujours applicables avec la version actuelle.</block>
   <block id="25742c79c197ce7f0982652ead3bd964" category="section-title">Flux de travail supplémentaires</block>
   <block id="7494e7f70b31d89664784c20229e8098" category="paragraph">Des workflows supplémentaires illustrant l'API REST Astra Control ont été ajoutés. Voir <block ref="fc2071d838ca44c08fca8ef5c62f2e8e" category="inline-link-macro-rx"></block> et <block ref="b729850dc33cbcb91b47d13a137b85a8" category="inline-link-macro-rx"></block> pour en savoir plus.</block>
   <block id="7a95f2a4373ad29d744890f090214195" category="inline-link">Problèmes connus du centre de contrôle Astra</block>
-  <block id="9fa80e5e6d07d73203692c1b2c6a3f1f" category="paragraph">Voir<block ref="1748a923b17519fc41af247d5369ec47" category="inline-link-rx"></block> pour en savoir plus.</block>
   <block id="1a615153bb2bd3389942d44023a8f4bb" category="paragraph-title">Possèdent des identifiants de compte Astra</block>
   <block id="7e8def8db3d7d1cc38b119879791cb9b" category="paragraph-title">Concepts de base de Kubernetes</block>
   <block id="0182974655f974e8429fb64bb3d15eb2" category="paragraph-title">Examiner les concepts DE REPOS et la mise en œuvre</block>
@@ -1164,4 +1157,30 @@
   <block id="cbb81506a7fe3ef03f7a89c76c52131a" category="paragraph-title">Pagination</block>
   <block id="e93f994f01c537c4e2f7d8528c3eb5e9" category="paragraph-title">Nombre</block>
   <block id="3b878279a04dc47d60932cb294d96259" category="sidebar">Présentation</block>
+  <block id="ec23c88fbeb1dbd6e4036cbd90351825" category="paragraph">Vous pouvez ajouter un cluster pour qu'il soit géré par Astra. À compter de la version 22.11 de l'Astra, vous pouvez ajouter un groupe d'instruments avec le centre de contrôle Astra et le service de contrôle Astra.</block>
+  <block id="9f8189b17fcf187cb4416d8f8ee93490" category="cell">Ces workflows permettent d'accéder aux clouds disponibles via l'API REST d'Astra Control.</block>
+  <block id="80bcbd8aa7db0b3dfcedfd4388c73c17" category="paragraph">La colonne *version* indique la version d'Astra lorsque la ressource a été introduite pour la première fois. Ce champ est en gras pour les ressources les plus récemment ajoutées à l'API REST.</block>
+  <block id="34d23ad383fb9597324019dc1045fabb" category="admonition">Il n'y a pas de nouveaux problèmes connus avec la version 23.01 de l'API REST Astra Control. Tout problème décrit ci-dessous a été découvert dans les versions précédentes et s'applique toujours à la version actuelle.</block>
+  <block id="73e9416791f56a93d23840b6c27ae436" category="paragraph">Consultez l'une des pages suivantes en fonction de votre modèle de déploiement.</block>
+  <block id="eb6a5d80177fc44f1a834a5fac76b612" category="inline-link">Problèmes connus concernant le service de contrôle Astra</block>
+  <block id="1a8244f3a147b8df7de50e9d16df07ac" category="list-text"><block ref="1a8244f3a147b8df7de50e9d16df07ac" category="inline-link-rx"></block></block>
+  <block id="750f48353ffad2f2dc8aaad3df0d9144" category="list-text"><block ref="750f48353ffad2f2dc8aaad3df0d9144" category="inline-link-rx"></block></block>
+  <block id="48d4b62231f750392dd784d9182c8dc5" category="paragraph">Ce site décrit l'API REST d'Astra Control et les technologies d'automatisation associées, incluses dans la dernière version des deux modèles de déploiement d'Astra.</block>
+  <block id="b23a60ebc7020fe310d80180653261b7" category="paragraph-title">Cadence de sortie</block>
+  <block id="aecf6ebbe0aba381087ff4427d1692b7" category="paragraph">En général, les mises à jour pour le service Astra Control et le centre de contrôle Astra sont publiées en même temps. Cependant, Astra Control Service utilise une cadence de sortie accélérée qui peut entraîner une ou plusieurs mises à jour incrémentielles au-delà de la dernière version d'Astra Control Center.</block>
+  <block id="0e4bd344e2cee7644ad300cdfc0d63d1" category="paragraph">Ce site présentant l'API REST pour les deux modèles de déploiement, il se peut que certaines fonctionnalités ou modifications ne s'appliquent qu'à la version la plus récente d'Astra Control Service. Les différences entre les deux sont notées sur ce site, au besoin.</block>
+  <block id="ce2f654fe20c0aa5fa4ece0648021275" category="paragraph-title">Les déploiements d'Astra Control</block>
+  <block id="a6614c977e9c818d6355f9b59c74764f" category="paragraph">La documentation de ce site s'applique aux modèles de déploiement Astra, comme indiqué ci-dessous.</block>
+  <block id="d92324a56dde3645b2b0ebf9145c93b8" category="list-text">Service de contrôle Astra 23.01</block>
+  <block id="910e94624b00c7abc1675a19e1165204" category="list-text">Astra Control Center 22.11</block>
+  <block id="ab066b3292d8ab61ef3b5c77169cdd19" category="paragraph-title">Plus d'informations</block>
+  <block id="06e642707bb2ed358193d9d175786f6d" category="paragraph">Pour plus d'informations sur les versions actuelles et antérieures d'Astra Control, y compris l'API REST, reportez-vous à la section suivante.</block>
+  <block id="57568765d51dbdfa0a0799807a13dfc5" category="inline-link">Documentation relative à Astra Control Service 23.01</block>
+  <block id="9905934fe9c85f338f46074487afd222" category="list-text"><block ref="9905934fe9c85f338f46074487afd222" category="inline-link-rx"></block></block>
+  <block id="8372692ac95eb7fc27fe8f964e134d59" category="paragraph-title">Soyez impliqué</block>
+  <block id="5596f30fbf5a63b7848467c492bb0781" category="paragraph">Suivez-nous sur Twitter *@NetAppDoc*. Vous pouvez également envoyer des commentaires sur la documentation en devenant un <block ref="78cabac26f0b6e0ce9a3e24d1b749910" category="inline-link-macro-rx"></block> ou envoyez un e-mail à _doccomments@netapp.com_.</block>
+  <block id="14f03db07d2c880fafbf7c4fdb9955bd" category="section-title">17 janvier 2023 (23.01)</block>
+  <block id="055a27c4d72ac10e8bf363a70b1218a0" category="paragraph">Cette version inclut une mise à jour mineure de l'API REST.</block>
+  <block id="fd681e19859abac8a0d1df0703c54996" category="section-title">Fonctionnalité améliorée de crochets d'exécution avec filtres</block>
+  <block id="03612c2b7f26bb15fe2a8f56732f28ad" category="paragraph">Lorsque vous utilisez des crochets d'exécution, vous pouvez désormais ajouter des filtres pour contrôler les conteneurs auxquels un crochet va correspondre. Si vous créez plusieurs filtres pour un seul crochet d'exécution, ils sont combinés avec un opérateur ET logique. Vous pouvez définir jusqu'à 10 filtres actifs par crochet d'exécution.</block>
 </blocks>
